--- a/plf-dependencies/pom.xml
+++ b/plf-dependencies/pom.xml
@@ -634,6 +634,16 @@
     </dependency>
     <dependency>
       <groupId>org.exoplatform.social</groupId>
+      <artifactId>social-webapp-spaces-administration</artifactId>
+      <type>war</type>
+    </dependency>
+    <dependency>
+      <groupId>org.exoplatform.social</groupId>
+      <artifactId>social-webapp-spaces-administration</artifactId>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.exoplatform.social</groupId>
       <artifactId>social-webapp-resources</artifactId>
       <type>war</type>
     </dependency>
